Basic structure for User module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# JPA
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=user
+spring.datasource.password=password
 
+# Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
