Improve security config, add cors policies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Spring Security
 spring.security.filter.order=10
+spring.mvc.dispatch-options-request=true
