--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 # JPA
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=user
-spring.datasource.password=password
-
+#spring.datasource.url=jdbc:h2:mem:test
+#spring.datasource.username=user
+#spring.datasource.password=password
 # Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-spring.jpa.defer-datasource-initialization=true
-
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+#spring.jpa.defer-datasource-initialization=true
 # Spring Security
 spring.security.filter.order=10
 spring.mvc.dispatch-options-request=true
+# Postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.username=user
+spring.datasource.password=password
