--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:postgresql://db:5432/
 spring.datasource.username=user
 spring.datasource.password=password
+
+server.servlet.context-path=/api
